--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,3 +35,32 @@ ul {
 a {
 	text-decoration: none;
 }
+
+input {
+	width: 400px;
+	padding: 6px 12px;
+	margin: 8px 0;
+	border-radius: 4px;
+	box-sizing: border-box;
+	border: 1px solid #ccc;
+}
+
+button {
+	background-color: #4CAF50;
+	color: white;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.content {
+	text-align: center;
+}
+
+.form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
