--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,28 +13,26 @@ code {
     monospace;
 }
 
-nav {
-	background-color: #efefef;
-	padding-top: 10px;
-	padding-bottom: 10px;
+ul.topnav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
 }
+ul.topnav li { float: left; }
 
-nav ul {
-	display: flex;
-	justify-content: space-evenly;
-}
-
-nav a {
-	font-size: 25px;
-}
-
-ul {
-	list-style: none;
-}
-
-a {
+ul.topnav li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
 	text-decoration: none;
 }
+
+ul.topnav li a:hover:not (.active) { background-color: #111; }
+ul.topnav li a.active { background-color:  #4CAF50 }
+ul.topnav li.right { float: right; }
 
 input {
 	width: 400px;
@@ -63,4 +61,11 @@ button {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+}
+
+
+
+@media screen and (max-width: 600px) {
+	ul.topnav li.right,
+	ul.topnav li { float: none; }
 }
