add story view in client

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,8 +34,8 @@ ul.topnav li a:hover:not (.active) { background-color: #111; }
 ul.topnav li a.active { background-color:  #4CAF50 }
 ul.topnav li.right { float: right; }
 
-input {
-	width: 400px;
+input, select, textarea {
+	width: 600px;
 	padding: 6px 12px;
 	margin: 8px 0;
 	border-radius: 4px;
