--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,8 @@ button {
 	border: none;
 	border-radius: 4px;
 	cursor: pointer;
+	margin-top: 20px;
+	margin-bottom: 40px;
 }
 
 .content {
@@ -63,6 +65,43 @@ button {
 	flex-direction: column;
 }
 
+.Home {
+	margin-top: 30px;
+}
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	max-width: 600px;
+	margin: auto;
+	text-align: center;
+	margin-bottom: 35px;
+}
+
+.card-category {
+	color: grey;
+	font-size: 18px;
+	text-transform: capitalize;
+}
+
+.card-button {
+	border: none;
+	outline: 0;
+	display: inline-block;
+	padding: 8px;
+	color: white;
+	background-color: #000;
+	text-align: center;
+	width: 100%;
+	cursor: pointer;
+	font-size: 18px;
+	margin-top: 7px;
+	margin-bottom: 0;
+	border-radius: 0;
+}
+
+.center {
+	text-align: center;
+}
 
 
 @media screen and (max-width: 600px) {
