start profile page client

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,10 @@ ul.topnav li a:hover:not (.active) { background-color: #111; }
 ul.topnav li a.active { background-color:  #4CAF50 }
 ul.topnav li.right { float: right; }
 
+ul {
+	list-style: none;
+}
+
 input, select, textarea {
 	width: 600px;
 	padding: 6px 12px;
